--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" href="static/css/default/default.css" type="text/css" media="screen" />
     	<link rel="stylesheet" href="static/css/nivo-slider.css" type="text/css" media="screen" />
 		<script charset="utf-8" type="text/javascript" src="../js/bsa.js"></script>
-		<script type="text/javascript" src="jquery-latest.min.js"></script>
+
 		<script type="text/javascript">
 			$(function() {
 				if ($.browser.msie && $.browser.version.substr(0,1)<7)
@@ -72,180 +72,183 @@
 
 			</div>
 			<!-- Menu principal -->
-			
-			<nav id="menu-wrap">    
-				<ul id="menu">
-					<li><a href="/">Inicio</a></li>
+			<br/><br/><br>
+				<div id="cont">
+					<div id="login_text">
+						<nav id="menu-wrap">    
+							<ul id="menu">
+								<li><a href="/">Inicio</a></li>
 
-					<li>
-						<a href="">Iglesia</a>
-						<ul>
-							<li>
-								<a href="">CSS</a>
-								<ul>
-									<li><a href="">Item 11</a></li>
+								<li>
+									<a href="">Iglesia</a>
+									<ul>
+										<li>
+											<a href="">CSS</a>
+											<ul>
+												<li><a href="">Item 11</a></li>
 
-									<li><a href="">Item 12</a></li>
-									<li><a href="">Item 13</a></li>
-									<li><a href="">Item 14</a></li>
-								</ul>				
-							</li>
-							<li>
-								<a href="">Graphic design</a>
+												<li><a href="">Item 12</a></li>
+												<li><a href="">Item 13</a></li>
+												<li><a href="">Item 14</a></li>
+											</ul>				
+										</li>
+										<li>
+											<a href="">Graphic design</a>
 
-								<ul>
-									<li><a href="">Item 21</a></li>
-									<li><a href="">Item 22</a></li>
-									<li><a href="">Item 23</a></li>
-									<li><a href="">Item 24</a></li>
-								</ul>				
-							</li>
+											<ul>
+												<li><a href="">Item 21</a></li>
+												<li><a href="">Item 22</a></li>
+												<li><a href="">Item 23</a></li>
+												<li><a href="">Item 24</a></li>
+											</ul>				
+										</li>
 
-							<li>
-								<a href="">Development tools</a>
-								<ul>
-									<li><a href="">Item 31</a></li>
-									<li><a href="">Item 32</a></li>
-									<li><a href="">Item 33</a></li>
-									<li><a href="">Item 34</a></li>
+										<li>
+											<a href="">Development tools</a>
+											<ul>
+												<li><a href="">Item 31</a></li>
+												<li><a href="">Item 32</a></li>
+												<li><a href="">Item 33</a></li>
+												<li><a href="">Item 34</a></li>
 
-								</ul>				
-							</li>
-							<li>
-								<a href="">Web design</a>				
-								<ul>
-									<li><a href="">Item 41</a></li>
-									<li><a href="">Item 42</a></li>
-									<li><a href="">Item 43</a></li>
+											</ul>				
+										</li>
+										<li>
+											<a href="">Web design</a>				
+											<ul>
+												<li><a href="">Item 41</a></li>
+												<li><a href="">Item 42</a></li>
+												<li><a href="">Item 43</a></li>
 
-									<li><a href="">Item 44</a></li>
-								</ul>	
-							</li>
-						</ul>
-					</li>
-					<li>
-						<a href="">Work</a>
-						<ul>
+												<li><a href="">Item 44</a></li>
+											</ul>	
+										</li>
+									</ul>
+								</li>
+								<li>
+									<a href="">Work</a>
+									<ul>
+										<li>
+											<a href="">Work 1</a>
+											<ul>
+												<li>
+													<a href="">Work 11</a>		
+													<ul>
+														<li><a href="">Work 111</a></li>
+														<li><a href="">Work 112</a></li>
 
-							<li>
-								<a href="">Work 1</a>
-								<ul>
-									<li>
-										<a href="">Work 11</a>		
-										<ul>
-											<li><a href="">Work 111</a></li>
-											<li><a href="">Work 112</a></li>
+														<li><a href="">Work 113</a></li>
+													</ul>							
+												</li>
+												<li>
+													<a href="">Work 12</a>
+													<ul>
+														<li><a href="">Work 121</a></li>
+														<li><a href="">Work 122</a></li>
 
-											<li><a href="">Work 113</a></li>
-										</ul>							
-									</li>
-									<li>
-										<a href="">Work 12</a>
-										<ul>
-											<li><a href="">Work 121</a></li>
-											<li><a href="">Work 122</a></li>
+														<li><a href="">Work 123</a></li>
+													</ul>							
+												</li>
+												<li>
+													<a href="">Work 13</a>
+													<ul>
+														<li><a href="">Work 131</a></li>
+														<li><a href="">Work 132</a></li>
 
-											<li><a href="">Work 123</a></li>
-										</ul>							
-									</li>
-									<li>
-										<a href="">Work 13</a>
-										<ul>
-											<li><a href="">Work 131</a></li>
-											<li><a href="">Work 132</a></li>
+														<li><a href="">Work 133</a></li>
+													</ul>							
+												</li>
+											</ul>					
+										</li>
+										<li>
+											<a href="">Work 2</a>
+											<ul>
+												<li>
 
-											<li><a href="">Work 133</a></li>
-										</ul>							
-									</li>
-								</ul>					
-							</li>
-							<li>
-								<a href="">Work 2</a>
-								<ul>
-									<li>
+													<a href="">Work 21</a>
+													<ul>
+														<li><a href="">Work 211</a></li>
+														<li><a href="">Work 212</a></li>
+														<li><a href="">Work 213</a></li>
+													</ul>							
+												</li>
 
-										<a href="">Work 21</a>
-										<ul>
-											<li><a href="">Work 211</a></li>
-											<li><a href="">Work 212</a></li>
-											<li><a href="">Work 213</a></li>
-										</ul>							
-									</li>
+												<li>
+													<a href="">Work 22</a>
+													<ul>
+														<li><a href="">Work 221</a></li>
+														<li><a href="">Work 222</a></li>
+														<li><a href="">Work 223</a></li>
+													</ul>							
+												</li>
 
-									<li>
-										<a href="">Work 22</a>
-										<ul>
-											<li><a href="">Work 221</a></li>
-											<li><a href="">Work 222</a></li>
-											<li><a href="">Work 223</a></li>
-										</ul>							
-									</li>
+												<li>
+													<a href="">Work 23</a>
+													<ul>
+														<li><a href="">Work 231</a></li>
+														<li><a href="">Work 232</a></li>
+														<li><a href="">Work 233</a></li>
+													</ul>							
+												</li>
 
-									<li>
-										<a href="">Work 23</a>
-										<ul>
-											<li><a href="">Work 231</a></li>
-											<li><a href="">Work 232</a></li>
-											<li><a href="">Work 233</a></li>
-										</ul>							
-									</li>
+											</ul>					
+										</li>
+										<li>
+											<a href="">Work 3</a>
+											<ul>
+												<li>
+													<a href="">Work 31</a>
+													<ul>
 
-								</ul>					
-							</li>
-							<li>
-								<a href="">Work 3</a>
-								<ul>
-									<li>
-										<a href="">Work 31</a>
-										<ul>
+														<li><a href="">Work 311</a></li>
+														<li><a href="">Work 312</a></li>
+														<li><a href="">Work 313</a></li>
+													</ul>							
+												</li>
+												<li>
+													<a href="">Work 32</a>
 
-											<li><a href="">Work 311</a></li>
-											<li><a href="">Work 312</a></li>
-											<li><a href="">Work 313</a></li>
-										</ul>							
-									</li>
-									<li>
-										<a href="">Work 32</a>
+													<ul>
+														<li><a href="">Work 321</a></li>
+														<li><a href="">Work 322</a></li>
+														<li><a href="">Work 323</a></li>
+													</ul>							
+												</li>
+												<li>
+													<a href="">Work 33</a>
 
-										<ul>
-											<li><a href="">Work 321</a></li>
-											<li><a href="">Work 322</a></li>
-											<li><a href="">Work 323</a></li>
-										</ul>							
-									</li>
-									<li>
-										<a href="">Work 33</a>
+													<ul>
+														<li><a href="">Work 331</a></li>
+														<li><a href="">Work 332</a></li>
+														<li><a href="">Work 333</a></li>
+													</ul>							
+												</li>
+											</ul>					
+										</li>
 
-										<ul>
-											<li><a href="">Work 331</a></li>
-											<li><a href="">Work 332</a></li>
-											<li><a href="">Work 333</a></li>
-										</ul>							
-									</li>
-								</ul>					
-							</li>
-
-						</ul>		
-					</li>
-					<li><a href="">About</a></li>
-					<li><a href="">Contact</a></li>
-				</ul>
-			</nav>
-
+									</ul>		
+								</li>
+								<li><a href="">About</a></li>
+								<li><a href="">Contact</a></li>
+							</ul>
+						</nav>
+						<div class="slider-wrapper theme-default">
+						    <div id="slider" class="nivoSlider">
+							        <img src="static/images/images-noticias/toystory.jpg" data-thumb="static/images/images-noticias/toystory.jpg" alt="" />
+								        <a href="http://dev7studios.com"><img src="static/images/images-noticias/up.jpg" data-thumb="static/images/images-noticias/up.jpg" alt="" title="This is an example of a caption" /></a>
+							        <img src="static/images/images-noticias/walle.jpg" data-thumb="static/images/images-noticias/walle.jpg" alt="" data-transition="slideInLeft" />
+							        <img src="static/images/images-noticias/nemo.jpg" data-thumb="images/nemo.jpg" alt="" title="#htmlcaption" />
+							 </div>
+							    <div id="htmlcaption" class="nivo-html-caption">
+							        <strong>This</strong> is an example of a <em>HTML</em> caption with <a href="#">a link</a>. 
+							    </div>
+						</div>
+					</div>
+				</div>
 		</div>
 
 <!-- slider of pictures -->
-			<div class="slider-wrapper theme-default">
-			    <div id="slider" class="nivoSlider">
-				        <img src="static/images/images-noticias/toystory.jpg" data-thumb="static/images/images-noticias/toystory.jpg" alt="" />
-					        <a href="http://dev7studios.com"><img src="static/images/images-noticias/up.jpg" data-thumb="static/images/images-noticias/up.jpg" alt="" title="This is an example of a caption" /></a>
-				        <img src="static/images/images-noticias/walle.jpg" data-thumb="static/images/images-noticias/walle.jpg" alt="" data-transition="slideInLeft" />
-				        <img src="static/images/images-noticias/nemo.jpg" data-thumb="images/nemo.jpg" alt="" title="#htmlcaption" />
-				    </div>
-				    <div id="htmlcaption" class="nivo-html-caption">
-				        <strong>This</strong> is an example of a <em>HTML</em> caption with <a href="#">a link</a>. 
-				    </div>
-			</div>	
+
 
 
 
