--- a/index.html
+++ b/index.html
@@ -232,10 +232,12 @@
                     </nav>
                     <div class="slider-wrapper theme-default">
                         <div id="slider" class="nivoSlider">
-                            <img src="static/images/images-noticias/toystory.jpg" data-thumb="static/images/images-noticias/toystory.jpg" alt="" />
-                            <a href="http://dev7studios.com"><img src="static/images/images-noticias/up.jpg" data-thumb="static/images/images-noticias/up.jpg" alt="" title="This is an example of a caption" /></a>
-                            <img src="static/images/images-noticias/walle.jpg" data-thumb="static/images/images-noticias/walle.jpg" alt="" data-transition="slideInLeft" />
-                            <img src="static/images/images-noticias/nemo.jpg" data-thumb="images/nemo.jpg" alt="" title="#htmlcaption" />
+                            <img src="static/images/images-noticias/El-Tiempo-ha-Llegado2.jpg" data-thumb="static/images/images-noticias/toystory.jpg" alt="" />
+                            <a href="http://dev7studios.com">
+                                <img src="static/images/images-noticias/Israel-Main-Web.jpg" data-thumb="static/images/images-noticias/up.jpg" alt="" title="This is an example of a caption" />
+                            </a>
+                            <img src="static/images/images-noticias/gm-live-spa.jpg" data-thumb="static/images/images-noticias/walle.jpg" alt="" data-transition="slideInLeft" />
+                            <img src="static/images/images-noticias/SupernaturalRevolution_web_banner_SPA.jpg" data-thumb="images/nemo.jpg" alt="" title="#htmlcaption" />
                         </div>
                         <div id="htmlcaption" class="nivo-html-caption">
                             <strong>This</strong> is an example of a <em>HTML</em> caption with <a href="#">a link</a>. 
