--- a/index.html
+++ b/index.html
@@ -58,15 +58,15 @@
                 <div class="top">
                     <div class="container_12"> 
                         <div class="container_12">
-                            <div class="grid_1 prefix_11">
-                                <img src="static/images/espanol.png" width="25" height="25" title="Espanol" alt="Espanol"/>
-                                <img src="static/images/ingles.png"  width="25" height="25" title="Ingles" alt="Ingles"/>
+                            <div class="grid_1 prefix_11" style="margin-top: 5px;">
+                                <img src="static/images/espanol.png" width="35" height="35" title="Espanol" alt="Espanol"/>
+                                <img src="static/images/ingles.png"  width="35" height="35" title="Ingles" alt="Ingles"/>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="logo_1">
-                    <img src="static/images/salem.png" width="240" height="200" title="Salem Internacional" />
+                    <img src="static/images/salem.png" width="280" height="240" title="Salem Internacional" />
                 </div>
 
             </div>
@@ -80,63 +80,61 @@
                             <li>
                                 <a href="">Iglesia</a>
                                 <ul>
-                                    <li>
-                                        <a href="">CSS</a>
-                                        <ul>
-                                            <li><a href="">Josue</a></li>
-                                            <li><a href="">Daniel</a></li>
-                                        </ul>				
-                                    </li>
-                                    <li>
-                                        <a href="">Otro Menu</a>
-
-                                        <ul>
-                                            <li><a href="">Otro Mass</a></li>
-                                            <li><a href="">Otro Mass 1</a></li>
-                                        </ul>				
-                                    </li>
-                                    <li>
-                                        <a href="">Development tools</a>			
-                                    </li>
-                                   
+                                    <li><a href="hola.php">Reseña Histórica</a></li> 
+                                    <li><a href="aqui.php">Organigrama</a></li> 
+                                    <li><a href="alla.php">Declaracón de Fe</a></li> 
+                                    <li><a href="alla.php">Familia Pastoral</a></li>
+                                    <li><a href="alla.php">Directiva</a></li>                                         
+                                </ul>
+                            </li>
+                            <li><a href="">V-18</a>
+                                <ul>
+                                    <li><a href="hola.php">Equipo de Liderazgo</a></li> 
+                                    <li><a href="aqui.php">Misión y Visión</a></li> 
+                                    <li><a href="alla.php">V-18 Internacional</a></li> 
+                                    <li><a href="alla.php">V-18 Administrativo</a></li>
                                 </ul>
                             </li>
                             <li>
-                                <a href="">Work</a>
-                           	<ul>
+                                <a href="">Dependencias</a>
+                                <ul> 
                                     <li>
-                                        <a href="">CSS</a>
+                                        <a href="hola.php">Ministerio. Damas</a>
                                         <ul>
-                                            <li><a href="">Josue</a></li>
-                                            <li><a href="">Daniel</a></li>
-                                        </ul>				
-                                    </li>
+                                            <li><a href="alla.php">Otros Ministerios</a></li> 
+                                            <li><a href="alla.php">Mas Ministerios</a></li>
+                                        </ul>
+                                    </li> 
                                     <li>
-                                        <a href="">Otro Menu</a>
-
+                                        <a href="aqui.php">Ministerio. Jóvenes</a>
                                         <ul>
-                                            <li><a href="">Otro Mass</a></li>
-                                            <li><a href="">Otro Mass 1</a></li>
-                                        </ul>				
-                                    </li>
-                                    <li>
-                                        <a href="">Development tools</a>			
-                                    </li>
-                                   
-                                </ul>
+                                            <li><a href="alla.php">Otros Ministerios</a></li> 
+                                            <li><a href="alla.php">Mas Ministerios</a></li>
+                                        </ul>
+                                    </li> 
+                                    <li><a href="alla.php">Escuela Dominical</a></li> 
+                                    <li><a href="alla.php">Adoración</a></li>
+                                    <li><a href="alla.php">Brigada</a></li> 
+                                </ul> 
                             </li>
-                            <li><a href="">About</a></li>
-                            <li><a href="">Contact</a></li>
+                            <li><a href="hola.php">Formación</a>
+                                <ul> 
+                                    <li><a href="hola.php">Escuela "ID"</a></li> 
+                                    <li><a href="aqui.php">Instituto Bíblico</a></li> 
+                                    <li><a href="alla.php">Formación V-18</a></li>  
+                                </ul> 
+                            </li>
+                            <li><a href="hola.php">Cultos y Eventos</a></li>
                         </ul>
                     </nav>
                     <div class="slider-wrapper theme-default">
                         <div id="slider" class="nivoSlider">
-                            <img src="static/images/images-noticias/El-Tiempo-ha-Llegado2.jpg" data-thumb="static/images/images-noticias/toystory.jpg" alt="" />
                             <a href="http://dev7studios.com">
-                                <img src="static/images/images-noticias/Israel-Main-Web.jpg" data-thumb="static/images/images-noticias/up.jpg" alt="" title="This is an example of a caption" />
+                                <img src="static/images/images-noticias/Israel-Main-Web1.jpg" data-thumb="static/images/images-noticias/Israel-Main-Web.jpg" alt="" title="This is an example of a caption" />
                             </a>
-                            <img src="static/images/images-noticias/gm-live-spa.jpg" data-thumb="static/images/images-noticias/walle.jpg" alt="" data-transition="slideInLeft" />
-                            <img src="static/images/images-noticias/SupernaturalRevolution_web_banner_SPA.jpg" data-thumb="images/nemo.jpg" alt="" title="#htmlcaption" />
+                            <img src="static/images/images-noticias/gm-live-spa1.jpg" data-thumb="static/images/images-noticias/gm-live-spa.jpg" alt="" data-transition="slideInLeft" />
+                            <img src="static/images/images-noticias/SupernaturalRevolution_web_banner_SPA1.jpg" data-thumb="images/SupernaturalRevolution_web_banner_SPA.jpg" alt="" title="#htmlcaption" />
+                            <img style="width: 650px;" src="static/images/images-noticias/El-Tiempo-ha-Llegado21.jpg" data-thumb="El-Tiempo-ha-Llegado21.jpg" alt="" title="#htmlcaption" />
                         </div>
                         <div id="htmlcaption" class="nivo-html-caption">
                             <strong>This</strong> is an example of a <em>HTML</em> caption with <a href="#">a link</a>. 
